ref: change tests, fix database, clean code
