# backend/src/routes/tasks.routes.js
@@ -5,10 +5,11 @@ const { authenticate } = require('../middleware/auth.middleware');
 const validate = require('../middleware/validate.middleware');
 
 router.use(authenticate);
+
 router.get('/', taskController.getAllTasks);
 router.get('/:id', taskController.getTaskById);
 router.post('/', validate('task'), taskController.createTask);
-router.put('/:id', validate('task'), taskController.updateTask);
+router.put('/:id', validate('taskUpdate'), taskController.updateTask);
 router.delete('/:id', taskController.deleteTask);
 
 module.exports = router;
